maze.lessons.maze.island.IslandMaze.scala.error
Escaper:12: error: illegal start of statement
  case 1 => else do {
            ^